--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^6.4.1",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "^2.29.0",
-    "webpack": "^2.7.0"
+    "open-browser-webpack-plugin": "0.0.5",
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^1.16.5"
+  },
+  "scripts": {
+    "start": "webpack --config webpack.config.js",
+    "devserver": "webpack-dev-server"
   },
   "dependencies": {
+    "leaflet": "^1.3.1",
     "rxjs": "^5.4.2"
   },
   "babel": {
